--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 *, *::before, *::after{
     margin: 0;
     padding: 0;
@@ -9,12 +11,6 @@
 }
 
 @font-face {
-    font-family: "Alibaba Sans Light"; 
-    src: url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.eot"); 
-    src: url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.woff") format("woff"), url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/6074015f10154b419845155111de2c8e.svg#Alibaba Sans Light") format("svg"); 
-}
-
-@font-face {
     font-family: 'Eurostile';
     src: url('./fonts/Eurostile-Bold.otf'); 
     font-weight: normal;
@@ -22,8 +18,10 @@
 }
 
 body{
-    font-family: "Alibaba Sans Light";
+    font-family: 'Roboto';
     font-size: 18px;
+    font-weight: 400;
+    color: #333;
 }
 
 .wrapper{
@@ -78,6 +76,7 @@ body{
 .page__text{
     margin-top: 15px;
     line-height: 1.2;
+    font-family: 'Roboto';
 }
 .page__footer{
     left: 50px;
@@ -91,12 +90,14 @@ body{
     font-size: 18px;
     line-height: 1.2;
     list-style-position: inside;
+    margin-top: 15px;
 }
 .page__list li{
+    margin-top: 5px;
     color: #fcbf0a;
 }
 .page__list li span{
-    color: black;
+    color: #333;
 }
 .page-bg::before, .page-bg::after{
     display: none;
@@ -187,7 +188,7 @@ body{
     margin-top: 15px;
 }
 .page:first-child{
-    padding-top: 40px;
+    padding-top: 60px;
 }
 .page__table td:first-child{
     text-align: start;
@@ -214,6 +215,7 @@ body{
     margin-top: 25px;
     position: relative;
     z-index: 100;
+    color: #fff;
 }
 .notification::before{
     content: "";
@@ -247,12 +249,14 @@ body{
 
 .logo{
     position: absolute;
-    top: 25px;
-    max-width: 100px;
+    top: -10px;
+    width: 100%;
+    max-width: 300px;
 }
 
 .logo img{
     max-width: 100%;
+    width: 100%;
     object-fit: contain;
 }
 
@@ -333,6 +337,15 @@ body{
     background-image: url(./);
     background-size: cover;
     z-index: 10000000;
+ }
+ .modal__close{
+     cursor: pointer;
+     position: absolute;
+     right: 12.5px;
+     top: 12.5px;
+     width: 15px;
+     height: 15px;
+     background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Layer_1' x='0px' y='0px' viewBox='0 0 512 512' style='enable-background:new 0 0 512 512;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpath fill = '%23fff' d='M505.943,6.058c-8.077-8.077-21.172-8.077-29.249,0L6.058,476.693c-8.077,8.077-8.077,21.172,0,29.249 C10.096,509.982,15.39,512,20.683,512c5.293,0,10.586-2.019,14.625-6.059L505.943,35.306 C514.019,27.23,514.019,14.135,505.943,6.058z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill = '%23fff' d='M505.942,476.694L35.306,6.059c-8.076-8.077-21.172-8.077-29.248,0c-8.077,8.076-8.077,21.171,0,29.248l470.636,470.636 c4.038,4.039,9.332,6.058,14.625,6.058c5.293,0,10.587-2.019,14.624-6.057C514.018,497.866,514.018,484.771,505.942,476.694z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
  }
  .modal.active{
      display: block;
@@ -455,6 +468,27 @@ body{
      z-index: 100000;
  }
 
+ .footer{
+     margin-bottom: 35px !important;
+ }
+
+ .subfooter{
+     padding: 10px 0;
+     color: #fff;
+     background-color: #333;
+     text-align: center;
+     font-size: 13px;
+}
+
+.required::after{
+    content: "*";
+    color: #e51610;
+    position: relative;
+    top: -5px;
+    margin-left: 2.5px;
+}
+
+
  @media (max-width: 850px){
      .tel-blocks{
          flex-direction: column;
@@ -474,14 +508,15 @@ body{
      .form-inner h3{
          font-size: 23px;
      }
+     .logo{
+         left: 50%;
+         transform: translateX(-50%);
+     }
  }
 
  @media (max-width: 500px){
     body{
         font-size: 14px;
-    }
-    .logo-left{
-        left: 15px;
     }
     .page{
         padding: 10px 15px;
@@ -489,6 +524,9 @@ body{
     .page__title{
         margin-top: 0;
         font-size: 20px;
+    }
+    .page:first-child .page__title{
+        margin-top: 20px;
     }
     .page__list, .page__table{
         font-size: 14px;
